--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
 	"dependencies": {
 		"@nestjs/common": "^6.10.14",
 		"@nestjs/core": "^6.10.14",
+		"@nestjs/mongoose": "^6.3.1",
 		"@nestjs/platform-express": "^6.10.14",
+		"@nestjs/swagger": "^4.3.1",
+		"class-transformer": "^0.2.3",
+		"class-validator": "^0.11.0",
+		"mongoose": "^5.9.2",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.0",
-		"rxjs": "^6.5.4"
+		"rxjs": "^6.5.4",
+		"swagger-ui-express": "^4.1.3"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^6.13.2",
