--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^6.10.14",
+		"@nestjs/config": "^0.2.4",
 		"@nestjs/core": "^6.10.14",
 		"@nestjs/mongoose": "^6.3.1",
 		"@nestjs/platform-express": "^6.10.14",
